--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "./built",
-    "allowJs": true,
-    "declaration": true,
-    "target": "es5"
-  },
-  "include": ["./src/**/*"]
+    "target": "es5",
+    "module": "CommonJS"
+  }
 }
