--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   },
   "homepage": "https://github.com/KodamaSakuno/Re-0-Make-your-own-Roguelike-Game-with-TypeScript#readme",
   "dependencies": {
+    "jquery": "^3.5.1",
     "rot-js": "^2.1.1"
   },
   "devDependencies": {
+    "@types/jquery": "^3.3.38",
+    "css-loader": "^3.5.3",
     "html-webpack-plugin": "^4.3.0",
     "ts-loader": "^7.0.3",
     "typescript": "^3.8.3",
