--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/KodamaSakuno/Re-0-Make-your-own-Roguelike-Game-with-TypeScript#readme",
   "dependencies": {
+    "howler": "^2.1.3",
     "install": "^0.13.0",
     "jquery": "^3.5.1",
     "rot-js": "^2.1.1"
