--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "start:chat-server": "node --nolazy -r ts-node/register chatServer.ts"
   },
   "repository": {
     "type": "git",
@@ -18,18 +19,25 @@
   },
   "homepage": "https://github.com/KodamaSakuno/Re-0-Make-your-own-Roguelike-Game-with-TypeScript#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "howler": "^2.1.3",
     "install": "^0.13.0",
     "jquery": "^3.5.1",
-    "rot-js": "^2.1.1"
+    "rot-js": "^2.1.1",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.6",
     "@types/jquery": "^3.3.38",
+    "@types/socket.io": "^2.1.4",
+    "@types/socket.io-client": "^1.4.32",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.5.3",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "ts-loader": "^7.0.3",
+    "ts-node": "^8.10.1",
     "typescript": "^3.8.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
